bug fix overflow-x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 /* Custom CSS */
+    html {
+      overflow-x: hidden;
+    }
 body {
     font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif;
